# ingestion-ec

./: .env.example  README.md  docker-compose.yml  pyproject.toml
scripts/: init_pgvector.sql
src/ingest_service/: __main__.py  chunking.py  cli.py  config.py  document_loader.py  embeddings.py  pipeline.py  repository.py  s3_events.py  s3_path.py  sqs_worker.py  vector_store.py
